# face-reco

./: .gitignore  CLAUDE.md  PROJECT-STRACTURE.md  README.md  REFACTORING_FINAL_REPORT.md  REFACTORING_SUMMARY.md  TEMP.md  dataio.py  fast_convert.py  main.py  metrics.json  pyproject.runpod.toml  pyproject.toml  sniperface.py
.claude/: settings.local.json
conf/: config.yaml  config_archive.yaml
docs/: DATA-FORMAT.md  RUNPOD_GUIDE.md
scripts/: optimize_speed.py
sniperface/: __init__.py  dataio.py  moco.py
src/: __init__.py  augmentations.py  checkpoint.py  pseudo.py  schedule.py  utils.py  wandb_utils.py
src/commands/: __init__.py  embed.py  eval.py  train.py
src/data/: __init__.py  binary_dataset.py  datasets.py  file_utils.py  splits.py  worker_utils.py
src/model/: __init__.py  backbone.py  moco.py
src/utils/: __init__.py  faiss_loader.py  platform.py  training_display.py
