[project]
name = "face-sniper-ssl"
version = "0.1.0"
description = "One-day label-free face encoder (MoCo + MarginNCE)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "tqdm",
  "faiss-cpu",
  "pillow",
  "wandb",
  "hydra-core",
  "omegaconf",
  "albumentations",
  "PyTurboJPEG",
]

[project.optional-dependencies]
# For 4070 Ti, 4090, A100, H100 (sm_89 and below)
cu124 = ["torch", "torchvision"]
# For Blackwell GPUs - RTX 5090, PRO 6000 (sm_120)
cu128 = ["torch", "torchvision"]

[tool.uv]
# Tell uv these extras are mutually exclusive
conflicts = [
  [{ extra = "cu124" }, { extra = "cu128" }]
]

# PyTorch CUDA 12.4 (4070 Ti, 4090, A100, H100)
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# PyTorch CUDA 12.8 (Blackwell - RTX 5090, PRO 6000)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "UP",     # pyupgrade
  "RUF",    # ruff-specific
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function call in default argument (common in dataclasses)
]

[tool.ruff.lint.isort]
known-first-party = ["moco", "dataio", "sniperface"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
